Изменение в списке авторов

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,10 @@
+Изменения в Novalog:
+
+* MAH69K <novalog@mah69k.net>
+  Внесение изменинй в функционал Metalog.
+
+Авторы Metalog:
+
 * Laurent Wandrebeck <wandre.l@free.fr>
   patches, etc
 
